--- a/DockerFile
+++ b/DockerFile
@@ -1,2 +1,4 @@
 FROM docker.io/centos
-RUN echo "hello from Dockerfile" > /tmp/demo
+RUN echo "hello from GIT" > /root/testing.txt
+RUN echo "hello tes11aaaa1t" > /root/orange.txt
+RUN echo " hello test2 " > /root/learning.txt
